assets/css/main.css
/* ... */
.btn--outline {
  background: none;
  border: 2px solid var(--dark);
  -webkit-box-shadow: none;
          box-shadow: none;
  color: var(--dark);
}
.btn--outline:hover, .btn--outline:active, .btn--outline:focus {
  background: none;
  border-color: var(--color);
  -webkit-box-shadow: none;
          box-shadow: none;
  color: var(--color);
}

[type=button],
[type=submit],
button {
  -webkit-appearance: none;
  -moz-appearance: none;
}

fieldset {
  border: 1px solid var(--light);
  margin: 0 0 1.5rem;
  padding: 1.5rem;
}
fieldset > legend {
  margin-left: -1rem;
  padding: 0 1rem;
}

legend {
  font-weight: var(--font-weight-bold);
}

label {
  font-weight: var(--font-weight-bold);
  margin: 0 1rem 0.75rem 0;
}

option {
  font-weight: var(--font-weight-normal);
}

[type=text],
[type=url],
[type=tel],
[type=number],
[type=email],
[type=search],
textarea,
select {
  background-color: var(--white);
  border: none;
  border: 1px solid var(--light);
  border-radius: var(--border-radius);
  font-size: 1rem;
  outline: none;
  padding: 0.375rem 0.75rem;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
}
@media all and (min-width: 37.5em) {
  [type=text],
[type=url],
[type=tel],
[type=number],
[type=email],
[type=search],
textarea,
select {
    width: auto;
  }
}
[type=text]:focus,
[type=url]:focus,
[type=tel]:focus,
[type=number]:focus,
[type=email]:focus,
[type=search]:focus,
textarea:focus,
select:focus {
  border-color: var(--color);
}

input[type=checkbox],
input[type=radio] {
  opacity: 0;
  position: absolute;
}
input[type=checkbox] + label,
input[type=radio] + label {
  position: relative;
  margin-left: -1px;
  cursor: pointer;
  padding: 0;
}
input[type=checkbox] + label:before,
input[type=radio] + label:before {
  background-color: var(--white);
  border: 1px solid var(--light);
  border-radius: 2px;
  content: "";
  display: inline-block;
  height: 1.25rem;
  line-height: 1.25rem;
  margin-right: 1rem;
  vertical-align: middle;
  text-align: center;
  width: 1.25rem;
}
input[type=checkbox]:checked + label:before,
input[type=radio]:checked + label:before {
  content: "";
  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 11 8'%3e%3cpolygon points='9.53 0 4.4 5.09 1.47 2.18 0 3.64 2.93 6.54 4.4 8 5.87 6.54 11 1.46 9.53 0' fill='%236B78B4'/%3e%3c/svg%3e");
  background-repeat: no-repeat;
  background-size: 11px 8px;
  background-position: 50% 50%;
}

input[type=radio] + label:before {
  border-radius: 50%;
}
input[type=radio]:checked + label:before {
  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3ccircle cx='4' cy='4' r='4' fill='%236B78B4'/%3e%3c/svg%3e");
}

[type=file] {
  margin-bottom: 1.5rem;
  width: 100%;
}

select {
  max-width: 100%;
  width: auto;
  position: relative;
}
select:not([multiple]) {
  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 6 6"><polygon points="3 6 3 6 0 0 6 0 3 6" fill="%238a8b8c"/></svg>') no-repeat 90% 50%;
  background-size: 8px;
  padding-right: 3rem;
}

select[multiple] {
  border: 1px solid var(--light);
  padding: 1.5rem;
  width: 100%;
}
select[multiple]:hover {
  border-color: var(--light);
}
select[multiple]:focus {
  border-color: var(--color);
}
select[multiple]:disabled {
  background-color: var(--lighter);
  cursor: not-allowed;
}
select[multiple]:disabled:hover {
  border-color: var(--light);
}

textarea {
  display: block;
  overflow: auto;
  resize: vertical;
  max-width: 100%;
}

/*
 * Put your custom CSS code here
 */
 .cards-colorpicker > input, .cards-colorpicker > input:after {
  margin:0;
  padding: 0;
  font-size: .8em;
 }
 .col1 {
  width: 100%;   
 }
 .col2 {
   width: 48%;   
 }
 .col3 {
   width: 30%;   
 }
 .col4 {
   width: 23%;   
 }
 .col5 {
   width: 18%;   
 }
 .col6 {
   width: 15%;   
 }
 .col7 {
   width: 13%;   
 }
 .col8 {
   width: 11%;   
 }
 .col9 {
   width: 10%;   
 }
 .col10 {
   width: 8%;   
 }
 .circular, .avatar > img {
  aspect-ratio: 1;
  border-radius: 50%;
  max-width: unset;
  width: auto;
  object-fit: cover;
}

.card-subtitle.external {
  text-align: center;
}
.card-subtitle.internal {
  display: none;
}
.card_wrapper.circular {
  /* border-color: var(--primaryHeaderColor);
  border-style: solid;
  border-width: 1rem; */
  border: solid 0rem var(--primaryHeaderColor);
  transition: border-width 0.6s ease-out;
  border-radius: 50%;
}
.card_wrapper.circular:hover {
  border: solid .3rem var(--primaryHeaderColor);
}
.card_wrapper.icon {
  margin-left: 40%;
  margin-right: 40%;
  min-height: 10vh;
}

.cards__item.external , .card-title.external, .card-subtitle.external, .card-caption.external, .card_image.external {
  aspect-ratio: unset;
  text-shadow: unset;
  color: var(--primaryBodyTextColor);
  max-height: inherit;
  position: inherit;
}
.card_wrapper, .card-title.external, .card-subtitle.external, .card-caption.external {
  overflow: hidden;
}
.card-title.external {
  font-size: 1.2em;
}
.cards .cards__item.external .card-title:hover, .cards .cards__item.external .card-subtitle:hover, .cards .cards__item.external .card-caption:hover,
.cards .cards__item.external:after, .cards .cards__item.external:hover  {
  text-decoration: none;
}
.card_wrapper {
  min-height: 20vh;
  display:flex;
  align-items: center;
  justify-content: center;
}
.card_image.circular {
  aspect-ratio: 1;
  width: -webkit-fill-available;
}
.card_link.external {
position: inherit;
aspect-ratio: unset;
overflow: auto;
}
.external {
max-height: auto;
aspect-ratio: unset;
overflow: auto;
}

.cards-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: var(--page-margin);
  margin-right: var(--page-margin);
  outline: none;
  position: relative;
}
.post__page .cards-wrapper {
  margin-left: 0;
  margin-right: 0;
  display: flex;
  flex-wrap: wrap;
}
/* ... */

